--- a/YouNew.AndroidApp/Resources/layout/activity_main.xml
+++ b/YouNew.AndroidApp/Resources/layout/activity_main.xml
@@ -5,6 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:height="150px"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="10px"
+        android:hint="@string/label_proxy_server"
+        android:id="@+id/txtServer"/>
     <Button
         android:text="@string/start_proxy"
         android:layout_width="wrap_content"
