--- a/YouNew.AndroidApp/Resources/layout/activity_main.xml
+++ b/YouNew.AndroidApp/Resources/layout/activity_main.xml
@@ -1,11 +1,46 @@
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    
+    <Button
+        android:text="@string/select_certificate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:width="400px"
+        android:height="100px"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/selectCertificate" />
+    <TextView
+        android:text="@string/label_thumbprint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:height="100px"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:height="150px"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="10px"
+        android:hint="@string/label_cert_pwd"
+        android:id="@+id/txtCertPwd"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:height="150px"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="10px"
+        android:inputType="none"
+        android:textIsSelectable="true"
+        android:id="@+id/txtThumbprint"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
